[gd_scene load_steps=2 format=3 uid="uid://b5iy4ivmldhdb"]

[ext_resource type="Script" path="res://Fruit Catch/fruit_catch_hud.gd" id="1_u3aji"]

[node name="FruitCatchHUD" type="CanvasLayer"]
script = ExtResource("1_u3aji")

[node name="InstructionsLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -204.0
offset_right = 300.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Guide your Tama around the screen using WASD or the arrow keys to collect as much falling fruit as possible before time is up! Make sure to be on the lookout for falling hazards!

Press the \"Start!\" button below when you're ready!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 76.0
offset_right = 200.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Start!"

[node name="ReadyCountdownLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -82.5
offset_right = 50.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TimeRemainingLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "30"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ReadyCountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="ReadyCountdownTimer" to="." method="_on_ready_countdown_timer_timeout"]
